Spacing issues while displaying converted markdown fixed!

--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,11 @@
 		@apply bg-background text-foreground;
 	}
 }
+
+.markdown p {
+	margin-bottom: 1.5rem;
+}
+
+* {
+	line-height: 1.7;
+}
